# quome-base-crm

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.prod  GAP_ANALYSIS.md  LEADS_CONTACTS_OWNERSHIP_USER_STORIES.md  STILL_NEED_TODO.csv  TASKS.csv  docker-compose-prod.yml  docker-compose.yml  package-lock.json  package.json  playwright.config.ts  railway.toml
crm/: .env.example  CHANGELOG.md  CODE_OF_CONDUCT.md  README.md  composer.json
crm/app/: helpers.php
crm/config/: app.php  auth.php  broadcasting.php  concord.php  quome-vite.php  services.php
docker/: Dockerfile  entrypoint.sh
docker/nginx/: default.conf
docker/php/: local.ini
docker/prod/: entrypoint.sh  nginx.conf  supervisord.conf
docs/: ARCHITECTURE.md  DEPLOYMENT.md  MOBILE_APP_PLAN.md  azure_sso_setup.md  kickoff-meeting-2026-04-03.md
extension/: manifest.json  package.json  vite.config.js
extension/background/: service-worker.js
extension/content-scripts/: generic.js  gmail.js  linkedin.js  twitter.js
extension/popup/: CaptureForm.vue  LoginForm.vue  Popup.vue
extension/public/: popup.html
make-com/: README.md  app.json  connection.json  modules.json
mcp-server/: Dockerfile  README.md  login.py  main.py  oauth_proxy.py  pyproject.toml  server.py
mobile/: package-lock.json  package.json
mobile/mobile/: package-lock.json  package.json
tests/: capture-all-tickets.ts  capture-verification.ts
tests/e2e/: action-stream-link.spec.ts  action-stream-ui.spec.ts  action-stream-user-picker.spec.ts  action-stream-wave1.spec.ts  action-stream-wave2.spec.ts  backups.spec.ts  (+75 more)
(+50 files in other folders)
