[project]
name = "union-bay-crm-mcp"
version = "0.1.0"
description = "MCP server for Union Bay CRM — lets Claude Desktop manage leads on your behalf."
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.27.0",
    "uvicorn[standard]>=0.30.0",
    "starlette>=0.37.0",
    "python-multipart>=0.0.9",
]

[tool.uv]
package = false
